# adif

./: .gitignore  CMakeLists.txt  README.md
di/: dependencyprovider.h  dependencyprovider_impl.cpp  dependencyprovider_impl.h  idiclient.cpp  idiclient.h  idiclientinjector.cpp  idiclientinjector.h  idiclientprovider.cpp  idiclientprovider.h
ds/: datastore.h  providerdatastore.h
example/: example.cpp
test/: simpletest.cpp
test_di/: dependencyprovidertest.cpp
test_ds/: datastoreinjectiontest.cpp  datastoretest.cpp
